# student-management-system

./: .gitignore.txt  CMakeLists.txt  README.md  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  student.c  student.h  students.c
